<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_title"
            android:id="@+id/add_new_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_name"
            android:id="@+id/new_task_name"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_end_date"
            android:id="@+id/new_task_end_date"
            android:inputType="text"/>

        <Spinner
            android:id="@+id/new_task_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prioritytype"
            android:entries="@array/taskprioritylist" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_new_btn"
            android:text="@string/create_new_button"
            android:onClick="createTask"/>


    </LinearLayout>

</FrameLayout>